--- a/src/main/webapp/airlines/create.xhtml
+++ b/src/main/webapp/airlines/create.xhtml
@@ -25,9 +25,7 @@
                 </h:commandButton>-->
                <h:commandButton value="create" action="#{airlineController.save()}"/>
             </h:form>
-            <h:panelGrid rendered="#{airlineController.airline.id != 0}" id="panel">
-                Airline Created with ID = #{airlineController.airline.id} and name = #{airlineController.airline.name}
-            </h:panelGrid>
+            <h:message for="#{airlineController}"/>
         </ui:define>
     </ui:composition>
 </h:body>
