--- a/src/main/webapp/airlines/list.xhtml
+++ b/src/main/webapp/airlines/list.xhtml
@@ -21,17 +21,20 @@
             <br/><h:link value="Home" outcome="exit" styleClass="btn"/>
             <h:link value="Create Airline" outcome="next" styleClass="btn"/><br/><br/>
             <h:form>
-                <h:dataTable value="#{airlineController.airlines}" var="airline" id="dataTable">
+                <h:dataTable value="#{airlineController.airlines}" var="airline" id="dataTable"
+                             styleClass="table"
+                             headerClass="table-header"
+                             rowClasses="table-odd-row,table-even-row">
                     <h:column>
                         <f:facet name="header">ID</f:facet>
-                        <h:inputText value="#{airline.id}"/>
+                        <h:outputText value="#{airline.id}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">Airline</f:facet>
                         <h:inputText value="#{airline.name}"/>
                     </h:column>
                     <h:column>
-                        <f:facet name="header">flights</f:facet>
+                        <f:facet name="header">Flights</f:facet>
                         <ui:repeat value="#{airline.flights}" var="flight">
                             #{flight.flightnr},
                         </ui:repeat>
