--- a/src/main/webapp/flightDetails.xhtml
+++ b/src/main/webapp/flightDetails.xhtml
@@ -25,8 +25,8 @@
                         <!--<f:selectItem itemValue="" itemLabel="&#45;&#45;Select One&#45;&#45;"/>
                         <f:selectItem itemValue="airline" itemLabel="Airline"/>
                         <f:selectItem itemValue="destination" itemLabel="Destination"/>
-                        <f:selectItem itemValue="departure" itemLabel="Departure date/time"/>
-                        <f:selectItem itemValue="arrival" itemLabel="Arrival date/time"/>-->
+                        <f:selectItem itemValue="departure" itemLabel="Departure date"/>
+                        <f:selectItem itemValue="arrival" itemLabel="Arrival date"/>-->
                         <f:valueChangeListener for="fil"/>
                     </h:selectOneMenu>
                     <h:inputText id="inp" binding="#{findByText}" p:placeholder="searchText"/>
