--- a/src/main/webapp/airlines/create.xhtml
+++ b/src/main/webapp/airlines/create.xhtml
@@ -15,8 +15,12 @@
         </ui:define>
 
         <ui:define name="content">
-            <br/><h:link value="Home" outcome="exit" styleClass="btn"/>
-            <h:link value="List Airline" outcome="prev" styleClass="btn"/><br/><br/>
+            <br/>
+            <h:form>
+                <h:commandLink value="Home" action="exit" styleClass="btn"/>
+                <h:commandLink value="List Airline" action="prev" styleClass="btn"/>
+            </h:form>
+            <br/><br/>
             <h:form>
                 <h:outputLabel>Airline Name</h:outputLabel>
                 <h:inputText value="#{airlineController.airline.name}" p:required="true"/>
