--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,8 +16,8 @@
 
         <ui:define name="content">
             <br/><h:form>
-                <h:commandLink action="flight" value="Flight Details" styleClass="btn"/><br/><br/>
-                <h:commandLink action="airline" value="Airlines Details" styleClass="btn"/>
+                <h:commandLink action="flight" value="Flight Details" styleClass="btn-home"/><br/><br/>
+                <h:commandLink action="airline" value="Airlines Details" styleClass="btn-home"/>
             </h:form>
         </ui:define>
     </ui:composition>
